<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Customer Manager</string>
    <string name="action_settings">Settings</string>
    
    <string name="Lbname">Name:</string>
    <string name="Lbmail">Mail:</string>
    <string name="Lbcity">City:</string>
    <string name="Lbcadastrar">Submit</string>
    <string name="Lbdeletar">Do you really wish delete this record?</string>
    <string name="Lbcadastrado_ok">Submit success</string>
    <string name="Lbcadastrado_nok">Error during submit</string>
    <string name="Lbatualizado_ok">Update success</string>
    <string name="Lbatualizado_nok">Error during update</string>
    <string name="Lbremovido_ok">Removed with success</string>
    <string name="Lbremovido_nok">Error during remove</string>
    <string name="Lbsim">Yes</string>
    <string name="Lbnao">No</string>
    <string name="Lbfillnome">Fill field name</string>
    <string name="Lbfillemail">Fill field mail</string>
    <string name="Lbfillcidade">Fill field city</string>
    
    <string name="Btatualizar">Update</string>
    <string name="Btdeletar">Delete</string>
    <string name="Btlistar">Customers</string>
    <string name="Btcadastrar">New customer</string>

</resources>
