<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Lbname" android:layout_weight="1"/>

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Lbmail" android:layout_weight="1"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/Lbcity" android:layout_weight="1"/>

    <EditText
        android:id="@+id/txtCidade"
        android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="AtualizarClick"
            android:text="@string/Btatualizar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="RemoverClick"
            android:text="@string/Btdeletar" />
    </LinearLayout>

</LinearLayout>